# medical-guideline-rag

./: .env.example  .env.template  Dockerfile  README.md  check_status.py  dev_start.sh  pyproject.toml
app/: __init__.py  main.py
config/: settings.py
data/drug_db/: medex_URL.json
data/processed/: amr.json  amr_bangladesh.json  amr_global.json  cancer.json  cancer_bangladesh.json  cancer_global.json  cardiovascular.json  cardiovascular_bangladesh.json  cardiovascular_global.json  cholera.json  cholera_bangladesh.json  cholera_global.json  ckd.json  ckd_bangladesh.json  ckd_global.json  community_health_workers.json  community_health_workers_bangladesh.json  dengue.json  dengue_bangladesh.json  dengue_global.json  diabetes.json  diabetes_bangladesh.json  diabetes_global.json  diarrhea.json  diarrhea_bangladesh.json  diarrhea_global.json  disease_surveillance_reports.json  drug_pricing.json  drug_pricing_bangladesh.json  drug_pricing_global.json  essential_medicines.json  essential_medicines_bangladesh.json  essential_medicines_global.json  health_policy.json  health_policy_bangladesh.json  health_policy_global.json  healthcare_system.json  healthcare_system_bangladesh.json  hepatitis.json  hepatitis_bangladesh.json  (+52 more)
src/data_collection/: fetch_medex.py  fetch_pubmed.py  fetch_who_guidelines.py
src/models/: __init__.py  medication_advice.py  schemas.py
src/preprocessing/: clean_text.py  summarizer.py
src/services/: __init__.py  drug_lookup.py  gemini_client.py  jina_scraper.py  medical_knowledge_graph.py  vector_search.py
src/utils/: text_processor.py
tests/: __init__.py  test_basic.py  test_integration.py
ui/: streamlit_app.py
