[project]
name = "medical-guideline-rag"
version = "1.0.0"
description = "AI-powered medication advisor using RAG and medical literature"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bio>=1.8.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.18.0",
    "pydantic>=2.0.0",
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "google-generativeai>=0.3.0",
    "sentence-transformers>=2.2.2",
    "faiss-cpu>=1.7.4",
    "spacy[lookups]>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "nltk>=3.9.1",
    "pypdf2>=3.0.1",
    "transformers>=4.55.2",
    "accelerate>=1.10.0",
    "jinja2>=3.1.0",
    "networkx>=3.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "instructor>=1.10.0",
    "reportlab>=4.4.3",
    "markdown>=3.8.2",
    "pip>=25.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "app", "ui", "config"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]
